# cppumock-lifetime

./: BufferType.hpp  CMakeLists.txt  CMakeSettings.json  CodeUnderTest.c  ExternalInterface.h  SimpleTest.cpp  TestRunner.cpp
